# Vinny

./: CMakeLists.txt
Автосалон/: 3_автосалон_упорядочив_по_номеру_месяца.c
Автосалон(3  4)/: 4_автосалон_упорядочив_по_убыванию_стоимости.c
Ремонт_техники/: БЫТОВАЯ_ТЕХНИКА_упорядочить_по_производителям.c  упорядочив_по_наименованию_производителя.c
Ремонт_техники( 9 10 11)/: 10_упорядочив_по_уменьшению_стоимость.c
автобусы/: 1_автобусы_упорядочив_по_названию_станции.c  автобусы_упорядочив_по_номеру_автобуса.c
библиотека/: отсортированный_по_читателям_список_выдач_книг_Пушкина.c  упорядочив_по_названию_жанра.c  упорятодить_по_фамилии_читателя_колво_книг.c
библиотека(5  6  7  8)/: 6_упорядочив_по_номеру_месяца.c
документов_на_предприятии( 13 )/: 13_упорядочив_по_отправителю.c
изделии/: количество_записей_по_каждому_разделу.c
кинотеатр/: упорядочив_по_названию_зала.c
сведения_о_вакансиях( 21 )/: 21_упорядочив_по_алфавиту.c
сведения_о_выпуске_изделий_и_затратах/: 24_упорядочив_по_номеру_статьи.c
сведения_о_грузах_и_размещении_на_стеллажах/: упорядочив_по_массе_по_убыванию.c
сведения_о_грузах_и_размещении_на_стеллажах( 22 23 )/: 22_стеллажей_упорядочив_по_наименованию.c
сведения_о_ежедневных_тратах( 19 )/: 19_Продукты_упорядочив_по_разделам.c
сведения_о_клиентах/: упорядочив_по_названию_валюты.c
сведения_о_личной_коллекции_марок/: 25_упорядочив_по_году.c
сведения_о_личной_коллекции_марок( 25 26)/: 26_упорядочив_по_названию_страны.c
сведения_о_намеченных_событиях/: Определить_затраты_времени_по_каждому_приоритету.c
сведения_о_намеченных_событиях( 20 )/: 20_Определить_затраты_времени_по_каждому_приоритету.c
сведения_о_приеме_пациентов/: 29_упорядочив_по-числу_посещений_по_убыванию.c
сведения_о_проживающих_гражданах( 27 28)/: 27_упорядоченный_по_номеру_счета.c  28_упорядоченный_по_адресу.c
сведения_о_свободных_и_занятых_номерах/: Люкс_упорядочив_по_фамилии.c
сведения_об_автомобилях( 18 )/: 18_Винни-Пуха_упорядочив_по_названиям_пунктов.c
сведения_об_успеваемости_студентов(30)/: 30_упорядочить_по_названию_группы_и_по_фамилии_студента.c
телефонной_станции/: упорядочить_список_городов.c
