cmake_minimum_required(VERSION 3.28)
project(untitled6 C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled6 автобусы/автобусы_упорядочив_по_названию_станции.c
        автобусы/автобусы_упорядочив_по_номеру_автобуса.c
        Автосалон/автосалон_упорядочив_по_номеру_месяца.c
        автосалон_упорядочив_по_убыванию_стоимости.c
        библиотека/упорятодить_по_фамилии_читателя_колво_книг.c
        библиотека/упорятодить_по_фамилии_читателя_колво_книг.c
        библиотека/упорядочив_по_номеру_месяца.c
        библиотека/упорядочив_по_названию_жанра.c
        библиотека/отсортированный_по_читателям_список_выдач_книг_Пушкина.c
        Ремонт_техники/упорядочив_по_наименованию_производителя.c
        Ремонт_техники/упорядочив_по_уменьшению_стоимость.c
        Ремонт_техники/БЫТОВАЯ_ТЕХНИКА_упорядочить_по_производителям.c
        кинотеатр/упорядочив_по_названию_зала.c
        документов_на_предприятии/упорядочив_по_отправителю.c)
