cmake_minimum_required(VERSION 3.28)
project(untitled6 C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled6 автобусы/1_автобусы_упорядочив_по_названию_станции.c
        автобусы/2_автобусы_упорядочив_по_номеру_автобуса.c
        Автосалон/3_автосалон_упорядочив_по_номеру_месяца.c
        автосалон_упорядочив_по_убыванию_стоимости.c
        библиотека/5_упорятодить_по_фамилии_читателя_колво_книг.c
        библиотека/5_упорятодить_по_фамилии_читателя_колво_книг.c
        библиотека/6_упорядочив_по_номеру_месяца.c
        библиотека/7_упорядочив_по_названию_жанра.c
        библиотека/8_отсортированный_по_читателям_список_выдач_книг_Пушкина.c
        Ремонт_техники/9_упорядочив_по_наименованию_производителя.c
        Ремонт_техники/10_упорядочив_по_уменьшению_стоимость.c
        Ремонт_техники/11_БЫТОВАЯ_ТЕХНИКА_упорядочить_по_производителям.c
        кинотеатр/12_упорядочив_по_названию_зала.c
        документов_на_предприятии/13_упорядочив_по_отправителю.c
        изделии/14_количество_записей_по_каждому_разделу.c
        телефонной_станции/15_упорядочить_список_городов.c
        сведения_о_клиентах/16_упорядочив_по_названию_валюты.c
        сведения_о_свободных_и_занятых_номерах/17_Люкс_упорядочив_по_фамилии.c
        сведения_об_автомобилях/18_Винни-Пуха_упорядочив_по_названиям_пунктов.c
        сведения_о_ежедневных_тратах/19_Продукты_упорядочив_по_разделам.c
        сведения_о_намеченных_событиях/20_Определить_затраты_времени_по_каждому_приоритету.c
        "сведения_о_вакансиях/21_упорядочив_по_алфавиту.c"
        сведения_о_грузах_и_размещении_на_стеллажах/22_стеллажей_упорядочив_по_наименованию.c
        сведения_о_грузах_и_размещении_на_стеллажах/23_упорядочив_по_массе_по_убыванию.c
        сведения_о_выпуске_изделий_и_затратах/24_упорядочив_по_номеру_статьи.c
        сведения_о_личной_коллекции_марок/25_упорядочив_по_году.c
        сведения_о_личной_коллекции_марок/26_упорядочив_по_названию_страны.c
        сведения_о_проживающих_гражданах/27_упорядоченный_по_номеру_счета.c
        сведения_о_проживающих_гражданах/28_упорядоченный_по_адресу.c
        сведения_о_приеме_пациентов/29_упорядочив_по-числу_посещений_по_убыванию.c
        сведения_об_успеваемости_студентов/30_упорядочить_по_названию_группы_и_по_фамилии_студента.c
)
